[gd_scene load_steps=47 format=3 uid="uid://dro6xc73x3rl4"]

[ext_resource type="Script" uid="uid://hlalmsu7y4nk" path="res://codings/UIScripts/textbox.gd" id="1_ho4q7"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_rgh70"]
[ext_resource type="FontFile" uid="uid://sehkl0mea74i" path="res://UI/Fonts/cyrenia-regular.ttf" id="3_8nnac"]
[ext_resource type="Script" uid="uid://bqfs1nucd5qo" path="res://codings/UIScripts/dialogue_label_ext.gd" id="4_rwcjm"]
[ext_resource type="Texture2D" uid="uid://bhbfk3uk3pfej" path="res://UI/Party/Cursor.png" id="5_byelp"]
[ext_resource type="FontFile" uid="uid://cumufnoi2wx0i" path="res://UI/Fonts/cyrenia-bold.ttf" id="6_jj8vm"]
[ext_resource type="FontVariation" uid="uid://b26p56yb7cgso" path="res://UI/Fonts/cyrenia-button.tres" id="7_lr0dp"]
[ext_resource type="Texture2D" uid="uid://m2xojhetr0ki" path="res://art/Portraits/MiraSmile.png" id="8_owatg"]
[ext_resource type="Texture2D" uid="uid://c30r3sp321gye" path="res://UI/Textbox/PictureFrame.png" id="9_t302t"]
[ext_resource type="Shader" uid="uid://bpx7sdi81bvy6" path="res://codings/Shaders/Unshaded.gdshader" id="9_taoyv"]
[ext_resource type="Texture2D" uid="uid://bv0rq7hr5ekhr" path="res://UI/Input/Y.png" id="10_rchcl"]
[ext_resource type="Texture2D" uid="uid://bpv6vrrg6tboq" path="res://UI/Input/A.png" id="11_n3uiu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nv2a"]
bg_color = Color(0.623529, 0.596078, 0.572549, 0.721569)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1o1fc"]
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 25
corner_radius_bottom_left = 25
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyggq"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="FontVariation" id="FontVariation_oe2ra"]
base_font = ExtResource("3_8nnac")
spacing_space = 1
spacing_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w18cv"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_ukaqu"]
Panel/styles/panel = SubResource("StyleBoxFlat_w18cv")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_w18cv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm627"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.584314, 0.584314, 0.584314, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o36pc"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.584314, 0.584314, 0.584314, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_fl2w0"]
Panel/styles/panel = SubResource("StyleBoxFlat_mm627")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_o36pc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ed0cv"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 11
border_width_top = 8
border_width_right = 16
border_width_bottom = 8
border_color = Color(0.305882, 0.305882, 0.305882, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4wnh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 11
border_width_top = 8
border_width_right = 16
border_width_bottom = 8
border_color = Color(0.305882, 0.305882, 0.305882, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 10.0
expand_margin_top = 8.0
expand_margin_right = 10.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id="Theme_wbt4v"]
Panel/styles/panel = SubResource("StyleBoxFlat_ed0cv")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_v4wnh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56ras"]
content_margin_left = 32.0
content_margin_top = 0.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8juak"]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tr53"]
content_margin_left = 32.0
content_margin_top = 0.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(0.909804, 0.909804, 0.909804, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(0.909804, 0.909804, 0.909804, 1)
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1d67"]
content_margin_left = 32.0
content_margin_top = 0.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="FontVariation" id="FontVariation_ti8n5"]
base_font = ExtResource("6_jj8vm")
spacing_glyph = 1

[sub_resource type="Theme" id="Theme_kq38n"]
default_font = SubResource("FontVariation_ti8n5")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/colors/font_hover_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/colors/font_hover_pressed_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/colors/font_pressed_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/font_sizes/font_size = 32
Button/styles/disabled = SubResource("StyleBoxFlat_56ras")
Button/styles/focus = SubResource("StyleBoxFlat_8juak")
Button/styles/hover = SubResource("StyleBoxFlat_6tr53")
Button/styles/normal = SubResource("StyleBoxFlat_y1d67")
Button/styles/pressed = SubResource("StyleBoxFlat_6tr53")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc2f1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 14.0
expand_margin_right = 14.0

[sub_resource type="Theme" id="Theme_v0wf3"]
default_font = ExtResource("7_lr0dp")
Label/colors/font_color = Color(0, 0, 0, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 2
Label/font_sizes/font_size = 24
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/font_sizes/normal_font_size = 26

[sub_resource type="Animation" id="Animation_ogxme"]
resource_name = "Glow"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/Glow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Balloon/Glow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 0.574349),
"update": 0,
"values": [Color(1, 1, 1, 0.745098), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Balloon/Glow2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4999, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.025, 1.065), Vector2(1.05, 1.13), Vector2(1, 1), Vector2(1.025, 1.065)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Balloon/Glow2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.4999, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.623529, 0.596078, 0.572549, 0.333333), Color(0.752941, 0.737255, 0.721569, 0), Color(1, 1, 1, 0.745098), Color(0.623529, 0.596078, 0.572549, 0.333333)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Balloon/Panel2/InputIndicator:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(-1.27456, -2, -2),
"update": 0,
"values": [Vector2(694, 195), Vector2(694, 200), Vector2(694, 195)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbycd"]
_data = {
&"Glow": SubResource("Animation_ogxme")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymvef"]
shader = ExtResource("9_taoyv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jsk3"]
content_margin_left = 6.0
bg_color = Color(0.768627, 0.768627, 0.768627, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(0.768627, 0.768627, 0.768627, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0jrc"]
content_margin_left = 6.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0taf"]
content_margin_left = 6.0
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 26
corner_radius_top_right = 26
corner_radius_bottom_right = 26
corner_radius_bottom_left = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22him"]
content_margin_left = 6.0
bg_color = Color(0.854902, 0.854902, 0.854902, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(0.854902, 0.854902, 0.854902, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26

[sub_resource type="Theme" id="Theme_fhrxs"]
default_font = ExtResource("7_lr0dp")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.501961)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/styles/disabled = SubResource("StyleBoxFlat_1jsk3")
Button/styles/focus = SubResource("StyleBoxFlat_w0jrc")
Button/styles/hover = SubResource("StyleBoxFlat_d0taf")
Button/styles/normal = SubResource("StyleBoxFlat_w0jrc")
Button/styles/pressed = SubResource("StyleBoxFlat_22him")
Panel/styles/panel = SubResource("StyleBoxFlat_w0jrc")

[sub_resource type="InputEventAction" id="InputEventAction_6r0ux"]
action = &"Dash"

[sub_resource type="Shortcut" id="Shortcut_62mq5"]
events = [SubResource("InputEventAction_6r0ux")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffef1"]
content_margin_left = 6.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26

[sub_resource type="Theme" id="Theme_royor"]
default_font = ExtResource("7_lr0dp")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.501961)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/styles/disabled = SubResource("StyleBoxFlat_1jsk3")
Button/styles/focus = SubResource("StyleBoxFlat_w0jrc")
Button/styles/hover = SubResource("StyleBoxFlat_d0taf")
Button/styles/normal = SubResource("StyleBoxFlat_w0jrc")
Button/styles/pressed = SubResource("StyleBoxFlat_ffef1")
Panel/styles/panel = SubResource("StyleBoxFlat_w0jrc")

[sub_resource type="InputEventAction" id="InputEventAction_jeo6e"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_a7vvg"]
events = [SubResource("InputEventAction_jeo6e")]

[node name="Textbox" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_ho4q7")

[node name="Fader" type="ColorRect" parent="."]
offset_right = 1284.0
offset_bottom = 803.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Balloon" type="ColorRect" parent="."]
pivot_offset = Vector2(635, 735)
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Glow" type="Panel" parent="Balloon"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 0
offset_left = 255.0
offset_top = 554.0
offset_right = 1018.0
offset_bottom = 777.0
pivot_offset = Vector2(382, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_1nv2a")

[node name="Glow2" type="Panel" parent="Balloon"]
modulate = Color(0.623529, 0.596078, 0.572549, 0.333333)
layout_mode = 0
offset_left = 255.0
offset_top = 554.0
offset_right = 1018.0
offset_bottom = 779.0
scale = Vector2(1.025, 1.065)
pivot_offset = Vector2(382, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_1nv2a")

[node name="Arrow" type="Panel" parent="Balloon"]
layout_mode = 0
offset_left = 238.0
offset_top = 621.0
offset_right = 260.0
offset_bottom = 654.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1o1fc")

[node name="Panel2" type="Panel" parent="Balloon"]
layout_mode = 2
offset_left = 257.0
offset_top = 557.0
offset_right = 1006.0
offset_bottom = 764.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nyggq")

[node name="DialogueLabel" parent="Balloon/Panel2" node_paths=PackedStringArray("AudioPlayer") instance=ExtResource("2_rgh70")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
offset_left = 34.0
offset_top = 34.0
offset_right = 721.0
offset_bottom = 210.0
theme_override_fonts/normal_font = SubResource("FontVariation_oe2ra")
theme_override_font_sizes/normal_font_size = 39
text = "The quick brown fox jumps over the lazy gods. This is a pretty long string of words to showcase the textbox"
script = ExtResource("4_rwcjm")
AudioPlayer = NodePath("../../../AudioStreamPlayer")
skip_action = &"DialogNext"
pause_at_characters = ".?!,"

[node name="InputIndicator" type="TextureRect" parent="Balloon/Panel2"]
layout_mode = 0
offset_left = 694.0
offset_top = 195.0
offset_right = 742.0
offset_bottom = 287.004
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_byelp")

[node name="Border1" type="PanelContainer" parent="Balloon/Panel2"]
layout_mode = 0
offset_left = -3.0
offset_top = -2.0
offset_right = 762.0
offset_bottom = 221.0
theme = SubResource("Theme_ukaqu")

[node name="Border2" type="PanelContainer" parent="Balloon/Panel2/Border1"]
show_behind_parent = true
layout_mode = 2
theme = SubResource("Theme_fl2w0")

[node name="Border3" type="PanelContainer" parent="Balloon/Panel2/Border1/Border2"]
show_behind_parent = true
layout_mode = 2
theme = SubResource("Theme_wbt4v")

[node name="Responses" type="VBoxContainer" parent="Balloon"]
layout_mode = 2
offset_left = 735.0
offset_top = 36.0
offset_right = 1147.0
offset_bottom = 498.0
pivot_offset = Vector2(409, 118)
theme_override_constants/separation = 36
alignment = 2

[node name="Button" type="Button" parent="Balloon/Responses"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
theme = SubResource("Theme_kq38n")
text = "Response"

[node name="Panel" type="PanelContainer" parent="Balloon"]
layout_mode = 0
offset_left = 342.0
offset_top = 530.0
offset_right = 398.0
offset_bottom = 570.0
scale = Vector2(1.24951, 1.24951)
theme_override_styles/panel = SubResource("StyleBoxFlat_cc2f1")

[node name="CharacterLabel" type="Label" parent="Balloon/Panel"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_v0wf3")
text = "Char"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -20.0
offset_right = 20.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
metadata/_edit_layout_mode = 1

[node name="Portrait" type="TextureRect" parent="."]
visible = false
offset_left = -31.0
offset_top = 340.0
offset_right = 2052.0
offset_bottom = 2423.0
scale = Vector2(0.22, 0.22)
texture = ExtResource("8_owatg")

[node name="Shadow" type="TextureRect" parent="Portrait"]
modulate = Color(0, 0, 0, 0.513726)
show_behind_parent = true
z_index = -3
layout_mode = 0
offset_left = -131.0
offset_top = 150.0
offset_right = 9466.0
offset_bottom = 9746.0
scale = Vector2(0.22, 0.22)
texture = ExtResource("8_owatg")

[node name="PictureFrame" type="TextureRect" parent="."]
clip_children = 1
offset_left = 829.0
offset_top = 98.0
offset_right = 2926.0
offset_bottom = 2195.0
scale = Vector2(0.205429, 0.205429)
mouse_filter = 2
texture = ExtResource("9_t302t")

[node name="Picture" type="TextureRect" parent="PictureFrame"]
layout_mode = 0
offset_left = 43.8107
offset_top = 19.4714
offset_right = 10043.8
offset_bottom = 10019.5
scale = Vector2(0.205429, 0.205429)
mouse_filter = 2
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tbycd")
}
autoplay = "Glow"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Hints" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1183.0
offset_top = 96.0
offset_right = 1223.0
offset_bottom = 136.0

[node name="Skip" type="Button" parent="Hints"]
visibility_layer = 1024
material = SubResource("ShaderMaterial_ymvef")
layout_direction = 1
layout_mode = 2
offset_left = -82.0
offset_top = -73.0
offset_right = 38.0
offset_bottom = -40.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(19.2536, 14.8241)
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = SubResource("Theme_fhrxs")
theme_override_font_sizes/font_size = 15
button_mask = 0
shortcut = SubResource("Shortcut_62mq5")
text = "Skip"
icon = ExtResource("10_rchcl")
expand_icon = true

[node name="Advance" type="Button" parent="Hints"]
visibility_layer = 1024
material = SubResource("ShaderMaterial_ymvef")
layout_direction = 1
layout_mode = 2
offset_left = -82.0
offset_top = -11.0
offset_right = 38.0
offset_bottom = 22.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(19.2536, 14.8241)
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = SubResource("Theme_royor")
theme_override_font_sizes/font_size = 15
button_mask = 0
shortcut = SubResource("Shortcut_a7vvg")
text = "Advance
"
icon = ExtResource("11_n3uiu")
text_overrun_behavior = 1
expand_icon = true

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="spoke" from="Balloon/Panel2/DialogueLabel" to="Balloon/Panel2/DialogueLabel" method="_on_spoke"]
